services/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../go-vela/worker/docker-compose.yml -o ./services/
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../go-vela/worker/docker-compose.yml -o ./services/
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/vela: "true"
        io.kompose.service: ui
    spec:
      containers:
        - env:
            - name: VELA_API
              valueFrom:
                configMapKeyRef:
                  key: VELA_API
                  name: env
          image: target/vela-ui:latest
          name: ui
          ports:
            - containerPort: 80 # serve http
          resources: {}
      restartPolicy: Always
status: {}
