services/vault-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../go-vela/worker/docker-compose.yml -o ./services/
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: vault
  name: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vault
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../go-vela/worker/docker-compose.yml -o ./services/
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/vela: "true"
        io.kompose.service: vault
    spec:
      containers:
        - args:
            - server
            - -dev
          image: vault:latest
          name: vault
          ports:
            - containerPort: 8200
          resources: {}
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
      restartPolicy: Always
status: {}
