services/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../go-vela/worker/docker-compose.yml -o ./services/
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
