services/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../go-vela/worker/docker-compose.yml -o ./services/
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: ui
status:
  loadBalancer: {}
