services/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../go-vela/worker/docker-compose.yml -o ./services/
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: vault
  name: vault
spec:
  ports:
    - name: "8200"
      port: 8200
      targetPort: 8200
  selector:
    io.kompose.service: vault
status:
  loadBalancer: {}
